--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.DS_Store
 Thumbs.db
 
+Library/
+
 #ignoring pidb, they are just code completion caching data according to:
 # http://stackoverflow.com/questions/1022111/what-are-monodevelops-pidb-files
 *.pidb
